
@startuml

[*] -> EXAMPLE
state EXAMPLE{
EXAMPLE : **global entry** : __global_on_enter()__
EXAMPLE : > Do the global on enter job\n
EXAMPLE : **global exit** : __global_on_exit()__
EXAMPLE : > Do the global on exit job\n
EXAMPLE --> State4 : Event7

EXAMPLE : **On** __Event4__ / //do global event 4 job//

EXAMPLE : **On** __Event6__ / //do global event 6 job//



[*] -> State2

State1 : //My first state//\n
State1 : **Entry** / __State1_on_enter()__
State1 : > Do the enter job for state 1\n
State1 --> State2 : Event1 [ Another condition ]

State1 --> State3 : Event2

State1 --> State4 : Event3 || Event4

State1 : **On** __Event4__ / //do event 4 job//

State1 : **On** __Event6__ / //do event 6 job//



State2 : //My secibd state//\n
State2 : **Exit** / __State2_on_exit()__
State2 : > Do the exit job for the state 2\n
State2 --> State3 : Event3

State2 --> State4 : Event4

State2 --> State1 : Event5

State2 : **On** __Event1 [ Condition example ]__ / //do event 1 job//



State3 : //My third state//\n
State3 : **Entry** / __State3_on_enter()__
State3 : > Do the enter job for state 3\n
State3 : **Exit** / __State3_on_exit()__
State3 : > Do the exit job for state 2\n
State3 --> State4 : Event6

State3 --> State2 : Event2

State3 --> State1 : Event1 [ Condition example ]

State3 : **On** __Event4__ / //do event 4 job//



State4 : //My fourth state//\n
State4 --> State1 : Event6

State4 --> State2 : Event5

State4 : **On** __Event2__ / //do event 2 job//


}

@enduml
